--- a/F/FlxQTL/Compat.toml
+++ b/F/FlxQTL/Compat.toml
@@ -1,7 +1,15 @@
 [0]
-Distributions = "0.24"
 LossFunctions = "0.6"
-PyPlot = "2.9.0-2"
 Revise = "3.1.0-3"
 StatsBase = "0.33"
+
+["0-0.1.0"]
+Distributions = "0.24"
+PyPlot = "2.9.0-2"
 julia = "1.5.0-1"
+
+["0.1.1-0"]
+Distributions = "0.23-0.24"
+PyPlot = "2.9"
+StaticArrays = "1.0.1-1"
+julia = "1.5"
