--- a/F/FlxQTL/Versions.toml
+++ b/F/FlxQTL/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "46662a2af70e027f688a826e0bb87adf290f02e9"
+
+["0.1.1"]
+git-tree-sha1 = "1be7ce3f658a0dc491cd092d5adb69a370b6f9b5"
